fix logo too big preventing clicks

--- a/app/styles/components/_logo.scss
+++ b/app/styles/components/_logo.scss
@@ -15,10 +15,9 @@
 
 
 .Logo {
-        max-width: $sidebar-width;
+        max-width: 10rem;
 	padding-top: 1.5rem;
 	padding-left: 3.5rem;
-	padding-right: 4.5rem;
 	user-select: none; // don't highlight
 	a {
 	    user-select: none; // don't highlight
